@startuml
title Step 3 - Database / ERD

hide circle
skinparam linetype ortho
skinparam packageStyle rectangle

package "Authentication Repositories" {
  entity "user_account" as user_account {
    * user_id : UUID <<PK>>
    --
    * username : VARCHAR(64) <<NOT NULL, UNIQUE>>
    * display_name : VARCHAR(255) <<NOT NULL>>
    * status : ENUM(ACTIVE, DISABLED) <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "local_credential" as local_credential {
    * user_id : UUID <<PK, FK>>
    --
    * password_hash : TEXT <<NOT NULL>>
    * password_changed_at : TIMESTAMP <<NOT NULL>>
  }

  entity "auth_session" as auth_session {
    * session_id : UUID <<PK>>
    --
    * user_id : UUID <<FK, NOT NULL>>
    * token_hash : BYTEA <<NOT NULL, UNIQUE>>
    * csrf_token_hash : BYTEA <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * last_seen_at : TIMESTAMP <<NOT NULL>>
    * expires_at : TIMESTAMP <<NOT NULL>>
    revoked_at : TIMESTAMP
  }

  entity "login_attempt" as login_attempt {
    * login_attempt_id : UUID <<PK>>
    --
    * scope : ENUM(ACCOUNT, SOURCE) <<NOT NULL>>
    * key_hash : BYTEA <<NOT NULL>>
    * window_started_at : TIMESTAMP <<NOT NULL>>
    * failure_count : INT <<NOT NULL>>
    blocked_until : TIMESTAMP
    * expires_at : TIMESTAMP <<NOT NULL>>
  }
}

package "Application Repository" {
  entity "application_definition" as application_definition {
    * application_id : UUID <<PK>>
    --
    * name : VARCHAR(255) <<NOT NULL, UNIQUE>>
    description : TEXT
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "application_definition_version" as application_definition_version {
    * application_definition_version_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * version_number : INT <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
  }

  entity "application_component" as application_component {
    * component_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * component_type : ENUM(WORKLOAD, RESOURCE_REQUIREMENT, ENVIRONMENT_VARIABLE_DEFINITION, SECRET_DEFINITION, PLATFORM_REQUIREMENT) <<NOT NULL>>
    platform_requirement_type : VARCHAR(100)
    * created_at : TIMESTAMP <<NOT NULL>>
  }

  entity "workload" as workload {
    * application_definition_version_id : UUID <<PK, FK>>
    * workload_id : UUID <<PK, FK>>
    --
    * name : VARCHAR(255) <<NOT NULL>>
    * type : VARCHAR(100) <<NOT NULL>>
    * image_repository : VARCHAR(1024) <<NOT NULL>>
    port : INT
    * exposed_outputs : JSONB <<NOT NULL>>
  }

  entity "resource_requirement" as resource_requirement {
    * application_definition_version_id : UUID <<PK, FK>>
    * resource_requirement_id : UUID <<PK, FK>>
    --
    * name : VARCHAR(255) <<NOT NULL>>
    * resource_type : VARCHAR(100) <<NOT NULL>>
  }

  entity "environment_variable_definition" as environment_variable_definition {
    * application_definition_version_id : UUID <<PK, FK>>
    * variable_definition_id : UUID <<PK, FK>>
    --
    * workload_id : UUID <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    * required : BOOLEAN <<NOT NULL>>
  }

  entity "secret_definition" as secret_definition {
    * application_definition_version_id : UUID <<PK, FK>>
    * secret_definition_id : UUID <<PK, FK>>
    --
    * workload_id : UUID <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    * required : BOOLEAN <<NOT NULL>>
  }

  entity "dependency" as dependency {
    * dependency_id : UUID <<PK>>
    --
    * application_definition_version_id : UUID <<FK, NOT NULL>>
    * source_workload_id : UUID <<FK, NOT NULL>>
    * target_type : ENUM(WORKLOAD, RESOURCE) <<NOT NULL>>
    target_workload_id : UUID <<FK>>
    target_resource_requirement_id : UUID <<FK>>
  }
}

package "Specification Repository / Config Repo Service" {
  entity "application_specification" as application_specification {
    * specification_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * application_definition_version_id : UUID <<FK, NOT NULL, UNIQUE>>
    * format : VARCHAR(50) <<NOT NULL>>
    * content : TEXT <<NOT NULL>>
    * version : VARCHAR(100) <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }
}

package "Environment Configuration Repository" {
  entity "environment_configuration" as environment_configuration {
    * environment_configuration_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * environment : ENUM(STAGING, PRODUCTION) <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "environment_variable" as environment_variable {
    * environment_variable_id : UUID <<PK>>
    --
    * environment_configuration_id : UUID <<FK, NOT NULL>>
    * workload_id : UUID <<FK, NOT NULL>>
    * variable_definition_id : UUID <<FK, NOT NULL>>
    * variable_name : VARCHAR(255) <<NOT NULL>>
  }

  entity "configuration_value" as configuration_value {
    * configuration_value_id : UUID <<PK>>
    --
    * environment_configuration_id : UUID <<FK, NOT NULL>>
    * environment_variable_id : UUID <<FK, NOT NULL, UNIQUE>>
    * value_source : ENUM(DIRECT, RESOURCE_OUTPUT, WORKLOAD_OUTPUT) <<NOT NULL>>
    direct_value : TEXT
    resource_requirement_id : UUID <<FK>>
    resource_output_name : VARCHAR(255)
    workload_id : UUID <<FK>>
    workload_output_name : VARCHAR(255)
  }

  entity "secret" as secret {
    * secret_id : UUID <<PK>>
    --
    * environment_configuration_id : UUID <<FK, NOT NULL>>
    * workload_id : UUID <<FK, NOT NULL>>
    * secret_definition_id : UUID <<FK, NOT NULL>>
    * secret_name : VARCHAR(255) <<NOT NULL>>
    * value_source : ENUM(SECRET_REF, RESOURCE_OUTPUT) <<NOT NULL>>
    secret_ref : VARCHAR(2048)
    resource_requirement_id : UUID <<FK>>
    resource_output_name : VARCHAR(255)
  }
}

package "Platform Resource Definition Catalog" {
  entity "catalog_version" as catalog_version {
    * catalog_version_id : UUID <<PK>>
    --
    * version_number : INT <<NOT NULL, UNIQUE>>
    * created_at : TIMESTAMP <<NOT NULL>>
  }

  entity "resource_definition" as resource_definition {
    * resource_definition_id : UUID <<PK>>
    --
    * catalog_version_id : UUID <<FK, NOT NULL>>
    * name : VARCHAR(255) <<NOT NULL>>
    * resource_type : VARCHAR(100) <<NOT NULL>>
    * provisioner_reference : VARCHAR(2048) <<NOT NULL>>
    * supported_contexts : JSONB <<NOT NULL>>
    * default_parameters : JSONB <<NOT NULL>>
    * allowed_overrides : JSONB <<NOT NULL>>
    * exposed_outputs : JSONB <<NOT NULL>>
    * sensitive_outputs : JSONB <<NOT NULL>>
    * management_mode : ENUM(MANAGED, EXISTING) <<NOT NULL>>
    applicability_conditions : JSONB
    existing_resource_reference : VARCHAR(2048)
    * requires : JSONB <<NOT NULL>>
  }
}

package "Delivery Repository Registry" {
  entity "delivery_repository" as delivery_repository {
    * delivery_repository_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL, UNIQUE>>
    * repository_url : VARCHAR(2048) <<NOT NULL>>
    * branch : VARCHAR(255) <<NOT NULL>>
    * write_key_reference : VARCHAR(2048) <<NOT NULL>>
    * read_key_reference : VARCHAR(2048) <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }
}

package "Resource Instance Repository" {
  entity "resource_instance" as resource_instance {
    * resource_instance_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * environment : ENUM(STAGING, PRODUCTION) <<NOT NULL>>
    * resource_requirement_id : UUID <<FK, NOT NULL>>
    * resource_definition_id : UUID <<FK, NOT NULL>>
    * deployment_target : VARCHAR(255) <<NOT NULL>>
    * infrastructure_reference : VARCHAR(2048) <<NOT NULL>>
    provider_state_reference : VARCHAR(2048)
    * status : ENUM(PLANNED, PROVISIONING, READY, FAILED, DESTROYED, UNLINKED) <<NOT NULL>>
    output_fingerprint : CHAR(64)
    * applied_overrides : JSONB <<NOT NULL>>
    applied_input_fingerprint : CHAR(64)
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }
}

package "Workload Instance Repository" {
  entity "workload_instance" as workload_instance {
    * workload_instance_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * workload_id : UUID <<FK, NOT NULL>>
    * environment : ENUM(STAGING, PRODUCTION) <<NOT NULL>>
    * deployment_target : VARCHAR(255) <<NOT NULL>>
    * current_workload_deployment_id : UUID <<FK, NOT NULL>>
    * status : ENUM(DEPLOYING, HEALTHY, FAILED, REMOVED) <<NOT NULL>>
    output_fingerprint : CHAR(64)
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }
}

package "Deployment Repository" {
  entity "deployment" as deployment {
    * deployment_id : UUID <<PK>>
    --
    * application_id : UUID <<FK, NOT NULL>>
    * application_definition_version_id : UUID <<FK, NOT NULL>>
    * catalog_version_id : UUID <<FK, NOT NULL>>
    * environment_configuration_id : UUID <<FK, NOT NULL>>
    * environment : ENUM(STAGING, PRODUCTION) <<NOT NULL>>
    * deployment_target : VARCHAR(255) <<NOT NULL>>
    * kind : ENUM(DEPLOY, TEARDOWN) <<NOT NULL>>
    * plan_fingerprint : CHAR(64) <<NOT NULL>>
    * plan_fingerprint_algo : VARCHAR(32) <<NOT NULL>>
    * status : ENUM(AWAITING_CONFIRMATION, CONFIRMED, DEPLOYING, SUCCEEDED, FAILED) <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "workload_deployment" as workload_deployment {
    * workload_deployment_id : UUID <<PK>>
    --
    * deployment_id : UUID <<FK, NOT NULL>>
    * workload_id : UUID <<FK, NOT NULL>>
    * image_repository : VARCHAR(1024) <<NOT NULL>>
    * image_version : VARCHAR(255) <<NOT NULL>>
    * inclusion_reason : ENUM(SELECTED, CASCADED) <<NOT NULL>>
    * wave_number : INT <<NOT NULL>>
  }

  entity "deployment_execution_job" as deployment_execution_job {
    * job_id : UUID <<PK>>
    --
    * deployment_id : UUID <<FK, NOT NULL, UNIQUE>>
    * selected_overrides : JSONB <<NOT NULL>>
    * status : ENUM(QUEUED, RUNNING, COMPLETED, FAILED) <<NOT NULL>>
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "deployment_context" as deployment_context {
    * deployment_context_id : UUID <<PK>>
    --
    * deployment_id : UUID <<FK, NOT NULL, UNIQUE>>
    cloud_provider : VARCHAR(100)
    region : VARCHAR(100)
    * target_specific_input : JSONB <<NOT NULL>>
  }

  entity "deployment_record" as deployment_record {
    * deployment_record_id : UUID <<PK>>
    --
    * deployment_id : UUID <<FK, NOT NULL, UNIQUE>>
    * environment : ENUM(STAGING, PRODUCTION) <<NOT NULL>>
    * deployment_target : VARCHAR(255) <<NOT NULL>>
    delivery_reference : VARCHAR(2048)
    * removed_components : JSONB <<NOT NULL>>
    * status : ENUM(AWAITING_CONFIRMATION, CONFIRMED, DEPLOYING, SUCCEEDED, FAILED) <<NOT NULL>>
    error_summary : TEXT
    * created_at : TIMESTAMP <<NOT NULL>>
    * updated_at : TIMESTAMP <<NOT NULL>>
  }

  entity "deployment_step" as deployment_step {
    * deployment_step_id : UUID <<PK>>
    --
    * deployment_id : UUID <<FK, NOT NULL>>
    * deployment_record_id : UUID <<FK, NOT NULL>>
    * sequence_number : INT <<NOT NULL>>
    * wave_number : INT <<NOT NULL>>
    * step_name : ENUM <<NOT NULL>>
    * status : ENUM(PENDING, RUNNING, SUCCEEDED, FAILED, SKIPPED) <<NOT NULL>>
    related_component_reference : VARCHAR(2048)
    error_summary : TEXT
    * detail : JSONB <<NOT NULL>>
    started_at : TIMESTAMP
    completed_at : TIMESTAMP
  }

  entity "deployment_record_resource_instance" as deployment_record_resource_instance {
    * deployment_record_resource_instance_id : UUID <<PK>>
    --
    * deployment_record_id : UUID <<FK, NOT NULL>>
    * resource_instance_id : UUID <<FK, NOT NULL>>
  }
}

user_account ||--|| local_credential : authenticates with
user_account ||--o{ auth_session : owns

application_definition ||--|{ application_definition_version : immutable versions
application_definition ||--o{ application_component : stable component ids
application_definition_version ||--|{ workload : contains
application_definition_version ||--o{ resource_requirement : contains
application_definition_version ||--o{ dependency : contains
application_component ||--o{ workload : identity per version
application_component ||--o{ resource_requirement : identity per version
application_component ||--o{ environment_variable_definition : identity per version
application_component ||--o{ secret_definition : identity per version
workload ||--o{ environment_variable_definition : defines
workload ||--o{ secret_definition : defines
workload ||--o{ dependency : source
workload |o--o{ dependency : target workload
resource_requirement |o--o{ dependency : target resource
application_definition_version ||--o| application_specification : generates

application_definition ||--o{ environment_configuration : configured for
environment_configuration ||--o{ environment_variable : contains
environment_configuration ||--o{ secret : contains
environment_configuration ||--o{ configuration_value : stores value sources
application_component ||--o{ environment_variable : configured workload / definition
application_component ||--o{ secret : configured workload / definition
environment_variable ||--|| configuration_value : has
application_component |o--o{ configuration_value : referenced resource or workload output
application_component |o--o{ secret : referenced sensitive output

catalog_version ||--|{ resource_definition : immutable definitions
resource_definition ||--o{ resource_instance : last applied or linked with
application_definition ||--o{ resource_instance : owner application
application_component ||--o{ resource_instance : owner requirement or platform requirement

application_definition ||--o| delivery_repository : desired state of this application
application_definition ||--o{ workload_instance : owner application
application_component ||--o{ workload_instance : instance of workload
workload_deployment ||--o{ workload_instance : currently running

application_definition ||--o{ deployment : deploys
application_definition_version ||--o{ deployment : deployed version
catalog_version ||--o{ deployment : catalog version used
environment_configuration ||--o{ deployment : used by
deployment ||--|{ workload_deployment : snapshots images
application_component ||--o{ workload_deployment : deployed as
deployment ||--o| deployment_execution_job : execution job
deployment ||--|| deployment_context : has
deployment ||--o| deployment_record : produces
deployment ||--o{ deployment_step : has steps
deployment_record ||--|{ deployment_step : progress
deployment_record ||--o{ deployment_record_resource_instance : references
resource_instance ||--o{ deployment_record_resource_instance : used by

note right of dependency
  CHECK: target_type selects exactly one target FK.
  Source and target belong to the same version (composite FK).
  No depends-on cycle inside a version (checked by the service).
end note

note right of application_definition_version
  Immutable: rows of a saved version (and its workloads, resource
  requirements, definitions, dependencies) are never updated or
  deleted. FKs to versions use ON DELETE RESTRICT.
end note

note bottom of delivery_repository
  One per application. IDP creates the repository on the first
  deployment and generates a key pair for this application only.
  Only secret references are stored; keys and the Git hosting
  credential stay in the Secret Store.
end note

note right of application_component
  Stable component IDs across versions. Tables outside a version
  (configuration, instances, workload_deployment) reference these IDs.
  PLATFORM_REQUIREMENT rows (e.g. k8s-cluster, network) are not versioned:
  platform_requirement_type is set only for them; at most one per
  application + type.
end note

note right of catalog_version
  Immutable: a catalog change inserts a new version with all its
  resource_definition rows; UNIQUE (catalog_version_id, name).
  requires must not form cycles (checked when the platform
  loads the version).
end note

note right of configuration_value
  Subtype value objects are embedded in this row.
  CHECK by value_source permits exactly one payload:
  DIRECT -> direct_value;
  RESOURCE_OUTPUT -> resource_requirement_id + resource_output_name;
  WORKLOAD_OUTPUT -> workload_id + workload_output_name.
  No resolved runtime value is stored.
end note

note right of secret
  CHECK permits exactly one source:
  SECRET_REF -> secret_ref, or
  RESOURCE_OUTPUT -> resource_requirement_id + resource_output_name.
  There is no plaintext secret column.
end note

note bottom of resource_instance
  Resource Output is TRANSIENT; therefore no resource_output table exists.
  Partial UNIQUE (application_id, environment, resource_requirement_id,
  deployment_target) WHERE status NOT IN (DESTROYED, UNLINKED).
  infrastructure_reference is not UNIQUE: EXISTING (shared) instances of
  several owners may point to the same real resource.
  Only output_fingerprint is stored, never output values.
  applied_input_fingerprint: input of the last apply (definition of
  the catalog version, parameters, outputs of required platform
  requirements); a different current input means UPDATE.
  applied_overrides is the effective override baseline from the last apply.
end note

note bottom of workload_instance
  Partial UNIQUE (workload_id, environment, deployment_target)
  WHERE status <> REMOVED.
  Kept with status REMOVED after removal. Workload Output is TRANSIENT;
  only output_fingerprint is stored.
end note

note bottom of deployment_execution_job
  Created in the same transaction as the CAS
  deployment.status AWAITING_CONFIRMATION -> CONFIRMED.
  Job status literals and worker recovery are deferred (D6).
end note

@enduml
